enabled NE2k IF

--- a/defaults/dosbox-0.74.conf
+++ b/defaults/dosbox-0.74.conf
@@ -259,9 +259,9 @@ ipx=false
 #          interface number (2 or something) or a part of your adapters
 #          name, e.g. VIA here.
 
-ne2000=false
+ne2000=true
 nicbase=300
-nicirq=10
+nicirq=9
 macaddr=AC:DE:48:88:99:AA
 realnic=eth0
 
