added defaults for CUPS, RSLSYNC and auto MOUNTs

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,13 +1,14 @@
-# This is the Pi/GEOS global configuration
-export DOSBOX_BIN=/usr/local/bin/dosbox
-export IMAGE_URL=(\
-  "Breadbox Ensemble 4 Demo" \
-  "https://dl.dropbox.com/s/4v6gm5z0ynyft4k/ensdemo402.tgz" \
-  "NewDeal Office 3.2a Evaluation" \
-  "http://gpcserver.fritz.box/ndoeval32a.tgz" \
-  "GeoWorks Publisher 2.01" \
-  "http://gpcserver.fritz.box/geopulish2.tgz" \
-  "Microsoft Windows 3.0 Working Model" \
-  "http;//gpcserver.fritz.box/win30model.tgz" \
-  "DOS Fun-Pack incl. Games & Demos" \
-  "http://gpcserver.fritz.box/dos_funpkg.tgz")
+DOSBOX_BIN=/usr/local/bin/dosbox
+FDA_IMAGE=NONE
+FDB_IMAGE=NONE
+HDC_IMAGE=NONE
+HDD_IMAGE=NONE
+CUPS_SLOAD=1
+CUPS_DBPRN=AUTO
+CUPS_ADMIN=0
+MIDI_SLOAD=0
+RSLSYNC_SLOAD=0
+RSLSYNC_WAN=0
+RSLSYNC_KEY=
+MOUNT_DOC=1
+MOUNT_USB=1
