add images for Syhra GEOS event (only accessable localy)

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,4 +1,16 @@
+# This is the Pi/GEOS global configuration
 DOSBOX_BIN=/usr/local/bin/dosbox
+IMAGE_URL=(\
+  "Breadbox Ensemble 4 Demo" \
+  "https://dl.dropbox.com/s/4v6gm5z0ynyft4k/ensdemo402.tgz" \
+  "NewDeal Office 3.2a Evaluation" \
+  "http://piserver/download/ndoeval32a.tgz" \
+  "GeoWorks Publisher 2.01" \
+  "http://piserver/download/geopulish2.tgz" \
+  "Microsoft Windows 3.0 Working Model" \
+  "http://piserver/download/win30model.tgz" \
+  "DOS Fun-Pack incl. Games & Demos" \
+  "http://piserver/download/dos_funpkg.tgz")
 CONTINUE_SETUP=0
 FDA_IMAGE=NONE
 FDB_IMAGE=NONE
