add SCREEN_RESOLUTION parameter

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -12,6 +12,7 @@ IMAGE_URL=(\
   "DOS Fun-Pack incl. Games & Demos" \
   "http://piserver/download/dos_funpkg.tgz")
 CONTINUE_SETUP=0
+SCREEN_RESOLUTION=1024x768
 FDA_IMAGE=NONE
 FDB_IMAGE=NONE
 HDC_IMAGE=NONE
@@ -25,3 +26,4 @@ RSLSYNC_WAN=0
 RSLSYNC_KEY=
 MOUNT_DOC=1
 MOUNT_USB=1
+KEYB=gr
