--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,16 +1,16 @@
 # This is the Pi/GEOS global configuration
 DOSBOX_BIN=/usr/local/bin/dosbox
 IMAGE_URL=(\
-  "Breadbox Ensemble 4 Demo" \
+  "Breadbox Ensemble 4.1.3 (License req.)" \
+  "https://dl.dropbox.com/s/rql58d6348qklog/ensfull413.tgz" \
+  "Breadbox Ensemble 4.0.2 Demo" \
   "https://dl.dropbox.com/s/4v6gm5z0ynyft4k/ensdemo402.tgz" \
   "NewDeal Office 3.2a Evaluation" \
-  "http://piserver/download/ndoeval32a.tgz" \
-  "GeoWorks Publisher 2.01" \
-  "http://piserver/download/geopulish2.tgz" \
-  "Microsoft Windows 3.0 Working Model" \
-  "http://piserver/download/win30model.tgz" \
+  "https://dl.dropbox.com/s/wtcrh5933me8v2l/ndoeval32d.tgz" \
+  "Geoworks Ensemble 1.2  Working Model" \
+  "https://dl.dropbox.com/s/b34rxjvpzr5qv5o/enswork120.tgz" \
   "DOS Fun-Pack incl. Games & Demos" \
-  "http://piserver/download/dos_funpkg.tgz")
+  "https://dl.dropbox.com/s/v6z5wtifqax2qwq/dosfunpack.tgz")
 CONTINUE_SETUP=0
 SCREEN_RESOLUTION=1024x768
 FDA_IMAGE=NONE
@@ -26,4 +26,4 @@ RSLSYNC_WAN=0
 RSLSYNC_KEY=
 MOUNT_DOC=1
 MOUNT_USB=1
-KEYB=gr
+KEYB=uk
