added missing printer section

--- a/defaults/dosbox-0.74.conf
+++ b/defaults/dosbox-0.74.conf
@@ -224,6 +224,25 @@ serial2=nullmodem server:127.0.0.1 port:2023
 serial3=disabled
 serial4=disabled
 
+[printer]
+# print_timeout: Number of ticks before spooled output is printed.
+#                (A number between 1 and 1000000)
+#        tmpdir: Path where to store temporary work files.
+#                If nothing is specified current directory will be used.
+#          LPT1: Set printer redirection
+#                Can be 'disabled' or platform dependend command.
+#                '%s' in command string will be replaced by temporary work file name.
+#          LPT2: see LPT1
+#          LPT3: see LPT1
+#          LPT4: see LPT1
+
+print_timeout=2000
+tmpdir=/tmp
+LPT1=pigeos-print %s
+LPT2=disabled
+LPT3=disabled
+LPT4=disabled
+
 [dos]
 #            xms: Enable XMS support.
 #            ems: Enable EMS support. The default (=true) provides the best
