add Geoworks Publish as GEOS 2.x

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,12 +1,14 @@
 # This is the Pi/GEOS global configuration
 DOSBOX_BIN=/usr/local/bin/dosbox
 IMAGE_URL=(\
-  "Breadbox Ensemble 4.1.3 (License req.)" \
+  "Breadbox Ensemble 4.1.3 (license req.)" \
   "https://dl.dropbox.com/s/rql58d6348qklog/ensfull413.tgz" \
   "Breadbox Ensemble 4.0.2 Demo" \
   "https://dl.dropbox.com/s/4v6gm5z0ynyft4k/ensdemo402.tgz" \
   "NewDeal Office 3.2a Evaluation" \
   "https://dl.dropbox.com/s/wtcrh5933me8v2l/ndoeval32d.tgz" \
+  "Geoworks Publisher 2.0.1 Shareware" \
+  "https://dl.dropbox.com/s/ipeu4vn506i5qj7/geopublish.tgz" \
   "Geoworks Ensemble 1.2  Working Model" \
   "https://dl.dropbox.com/s/b34rxjvpzr5qv5o/enswork120.tgz" \
   "DOS Fun-Pack incl. Games & Demos" \
