list of disk images is retrieved as a JSON file from the repo itself (PIGEOS_RPO) -> will stay up to date

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,18 +1,7 @@
 # This is the Pi/GEOS global configuration
+PIGEOS_VER="beta Rev 0.5"
+PIGEOS_RPO="https://thobipix.de/download/rpi/pigeos/pigeos.repo"
 DOSBOX_BIN=/usr/local/bin/dosbox
-IMAGE_URL=(\
-  "Breadbox Ensemble 4.1.3 (license req.)" \
-  "https://thobipix.de/download/rpi/pigeos/ensfull413.tgz" \
-  "Breadbox Ensemble 4.0.2 Demo" \
-  "https://thobipix.de/download/rpi/pigeos/ensdemo402.tgz" \
-  "NewDeal Office 3.2a Evaluation" \
-  "https://thobipix.de/download/rpi/pigeos/ndoeval32d.tgz" \
-  "Geoworks Publisher 2.0.1 Shareware" \
-  "https://thobipix.de/download/rpi/pigeos/geopublish.tgz" \
-  "Geoworks Ensemble 1.2  Working Model" \
-  "https://thobipix.de/download/rpi/pigeos/enswork120.tgz" \
-  "DOS Fun-Pack incl. Games & Demos" \
-  "https://thobipix.de/download/rpi/pigeos/dosfunpack.tgz")
 CONTINUE_SETUP=0
 SCREEN_RESOLUTION=1024x768
 FDA_IMAGE=NONE
