screen resolution removed, FeedProxy added

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,9 +1,8 @@
 # This is the Pi/GEOS global configuration
-PIGEOS_VER="beta Rev 0.5"
+PIGEOS_VER="Rev 1.0"
 PIGEOS_RPO="https://thobipix.de/download/rpi/pigeos/pigeos.repo"
 DOSBOX_BIN=/usr/local/bin/dosbox
 CONTINUE_SETUP=0
-SCREEN_RESOLUTION=1024x768
 FDA_IMAGE=NONE
 FDB_IMAGE=NONE
 HDC_IMAGE=NONE
@@ -15,6 +14,8 @@ MIDI_SLOAD=0
 RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
 RSLSYNC_KEY=
+FEEDPROXY_SLOAD=0
+FEEDPROXY_IP=$(docker inspect feedproxy.service 2>/dev/null | jq -r '.[].NetworkSettings.IPAddress')
 MOUNT_DOC=1
 MOUNT_USB=1
 KEYB=us
