--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -15,7 +15,7 @@ RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
 RSLSYNC_KEY=
 FEEDPROXY_SLOAD=0
-FEEDPROXY_IP=$(docker inspect feedproxy.service 2>/dev/null | jq -r '.[].NetworkSettings.IPAddress')
+FEEDPROXY_IP=$(sudo docker inspect feedproxy.service 2>/dev/null | jq -r '.[].NetworkSettings.IPAddress')
 MOUNT_DOC=1
 MOUNT_USB=1
 KEYB=us
