set version to 0.9

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,5 +1,5 @@
 # This is the Pi/GEOS global configuration
-PIGEOS_VER="Rev 1.0"
+PIGEOS_VER="beta Rev 0.9"
 PIGEOS_RPO="https://thobipix.de/download/rpi/pigeos/pigeos.repo"
 DOSBOX_BIN=/usr/local/bin/dosbox
 CONTINUE_SETUP=0
