--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -10,6 +10,9 @@ HDD_IMAGE=NONE
 CUPS_SLOAD=1
 CUPS_DBPRN=AUTO
 CUPS_ADMIN=0
+CUPS_DUPENF=0
+CUPS_DUPMODE=MANUAL
+CUPS_DUPWAIT=60
 MIDI_SLOAD=0
 RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
