addad IMG2GEOS service

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -17,6 +17,12 @@ MIDI_SLOAD=0
 RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
 RSLSYNC_KEY=
+IMG2GEOS_SLOAD=0
+IMG2GEOS_GPALETTE=/usr/local/share/pigeos/palette.tif
+IMG2GEOS_INPATH=$HOME/Shared/IMG2GEOS
+IMG2GEOS_OUTPATH=$HOME/Shared/IMG4GEOS
+IMG2GEOS_DITHER_TH=32000
+ING2GEOS_MAX_WIDTH=800
 FEEDPROXY_SLOAD=0
 FEEDPROXY_IP=$(sudo docker inspect feedproxy.service 2>/dev/null | jq -r '.[].NetworkSettings.IPAddress')
 MOUNT_DOC=1
