--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -1,5 +1,5 @@
 # This is the Pi/GEOS global configuration
-PIGEOS_VER="beta Rev 1.0"
+PIGEOS_VER="Rev 1.0"
 PIGEOS_RPO="https://thobipix.de/download/rpi/pigeos/pigeos.repo"
 DOSBOX_BIN=/usr/local/bin/dosbox
 CONTINUE_SETUP=0
@@ -10,9 +10,11 @@ HDD_IMAGE=NONE
 CUPS_SLOAD=1
 CUPS_DBPRN=AUTO
 CUPS_ADMIN=0
+CUPS_MCPYFIX=0
 CUPS_DUPENF=0
 CUPS_DUPMODE=MANUAL
 CUPS_DUPWAIT=60
+CUPS_DUPTUMBLE=1
 MIDI_SLOAD=0
 RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
