--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -9,12 +9,10 @@ HDC_IMAGE=NONE
 HDD_IMAGE=NONE
 CUPS_SLOAD=1
 CUPS_DBPRN=AUTO
-CUPS_ADMIN=0
-CUPS_MCPYFIX=0
+CUPS_ADMIN=0s
 CUPS_DUPENF=0
 CUPS_DUPMODE=MANUAL
 CUPS_DUPWAIT=60
-CUPS_DUPTUMBLE=1
 MIDI_SLOAD=0
 RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
