fix typo; enable MIDI

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -9,11 +9,11 @@ HDC_IMAGE=NONE
 HDD_IMAGE=NONE
 CUPS_SLOAD=1
 CUPS_DBPRN=AUTO
-CUPS_ADMIN=0s
+CUPS_ADMIN=0
 CUPS_DUPENF=0
 CUPS_DUPMODE=MANUAL
-CUPS_DUPWAIT=60
-MIDI_SLOAD=0
+CUPS_DUPWAIT=120
+MIDI_SLOAD=1
 RSLSYNC_SLOAD=0
 RSLSYNC_WAN=0
 RSLSYNC_KEY=
