added WebOne proxy as docker service

--- a/defaults/pigeos.conf
+++ b/defaults/pigeos.conf
@@ -25,6 +25,8 @@ IMG2GEOS_DITHER_TH=32000
 ING2GEOS_MAX_WIDTH=800
 FEEDPROXY_SLOAD=0
 FEEDPROXY_IP=$(sudo docker inspect feedproxy.service 2>/dev/null | jq -r '.[].NetworkSettings.IPAddress')
+WEB1PROXY_SLOAD=0
+WEB1PROXY_IP=$(sudo docker inspect webone.service 2>/dev/null | jq -r '.[].NetworkSettings.IPAddress')
 MOUNT_USB=1
 KEYB=us
 VOL_LEVEL=80
